--- a/app/index.html
+++ b/app/index.html
@@ -184,6 +184,7 @@
     <!--**********************************************************************************************************-->
     <!--**********************************************************************************************************-->
     <!-- vendor libs -->
+    <script src="http://localhost:35729/livereload.js"></script> <!-- livereload -->
     <script src="js/lib/dojo-config.js"></script> <!-- dojo config -->
     <script src="//js.arcgis.com/3.11/"></script> <!-- esri -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script> <!-- angular -->
