--- a/app/index.html
+++ b/app/index.html
@@ -162,7 +162,8 @@
       <div id="LocateButton"></div>
     </div>
 
-
+    <!-- Disclaimer -->
+    <disclaim-block></disclaim-block>
     <!-- Share/Embed -->
     <share-block></share-block>
     <!-- Help Assistant -->
