--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" type="text/css" href="css/tour-style.css"> <!-- bootstrap tour -->
     <!-- Custom Theme Override -->
     <link rel="stylesheet" ng-href="css/themes/layout-{{layout}}.css">
+    <link rel="stylesheet" ng-href="css/themes/media-queries-{{layout}}.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../bootstrap_v3/docs-assets/js/html5shiv.js"></script>
