--- a/app/index.html
+++ b/app/index.html
@@ -299,14 +299,11 @@
 
          </li>
         <li class=""><info-card></info-card></li>
+        <li class="" style="display:none;"><weather-card></weather-card></li>
         <li class="">      
           <a style="font-size: 85% !important;" class="introPaneTextSubset feedbackBlurb" style="" href="http://gisgate.co.clark.nv.us/gismo/apps/mobile/ow4/app/feedback/form.html"> <br> <i class="icon ion-thumbsup"></i> | Your feedback helps improve OpenWeb   </a>
 
-<!--           <br> <span style=" color: #428bca; text-decoration: none;">Let us know how we can improve</span> -->
-<!-- 
-         <i class="icon ion-thumbsup"></i>
-                  <span class="iconic-adjust-main ion-thumbsup" data-pack="default" data-tags="magnifying glass"></span>
- -->
+
         </li>
 
 
