--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,6 @@
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> -->
 
 
-
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700|Noto+Sans:300,400,500,700|Open+Sans:300,400,500,700|Roboto:300,400,500,700" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <!-- overrides -->
@@ -127,8 +126,6 @@
     <div class="skinnyPanel conditionalShow right-edge-shadow gradient sliderStyle"> <!-- id="skinnyPanel" -->
 
 
-
-
       <!-- Display View Section -->
       <display-view></display-view>
 
@@ -143,77 +140,7 @@
 
 
 
-
-
-
-
-
-
-      <!-- tabs content -->
-<!--       <div class="tab-content">
-        <div class="tab-pane active" id="introTab" style="width:240px;"> -->
-          <!-- Intro View -->
-<!--           <intro-view></intro-view>
-        </div>
-        <div class="tab-pane" id="displayTab"> -->
-          <!-- Display View -->
- <!--          <display-view></display-view>
-        </div>
-        <div class="tab-pane" id="toolsTab"> -->
-          <!-- Tools View -->
-  <!--         <tools-view></tools-view>
-        </div>
-        <div class="tab-pane" id="resourcesTab"> -->
-          <!-- Resources View -->
- <!--          <resources-view></resources-view>
-        </div> -->
-
-
-
-
-           <!-- MainTabs -->
-<!--            <div id="mainTabs" class="tabs-below">
-               <ul class="nav nav-tabs theMainTabs">  -->
-
-        <!--                <li class="active"><a id="tackTab" href="#a" data-toggle="tab" data-placement="bottom" class="tip"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons">&#xe801;</i></a></li>
-                       <li><a id="compassTab" href="#b" data-toggle="tab" data-placement="bottom" class="tip"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons">&#xe808;</i></a></li>
-                       <li><a id="pencilTab" href="#c" data-toggle="tab" data-placement="bottom" class="tip"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons"></i></a></li>
-                       <li><a id="gearTab" href="#d" data-toggle="tab" data-placement="bottom" class="tip"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons">&#xe807;</i></a></li> -->
-
-        <!--                <li class="active" ng-click="select($index)" ng-class="{sel: $index == selected}"><a id="tackTab" href="#a" data-toggle="tab" data-placement="bottom" title="Intro"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-                       <li ng-click="select($index)" ng-class="{sel: $index == selected}"><a id="compassTab" href="#b" data-toggle="tab" data-placement="bottom" title="Display"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-                       <li ng-click="select($index)" ng-class="{sel: $index == selected}"><a id="pencilTab" href="#c" data-toggle="tab" data-placement="bottom" title="Tools"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-                       <li ng-click="select($index)" ng-class="{sel: $index == selected}"><a id="gearTab" href="#d" data-toggle="tab" data-placement="bottom" title="Resources"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li> -->
-
-                       <!--    <button title="Reset Pricing" type="button"
-                                  class="btn btn-mini resetPrice"
-                                  data-placement='bottom'>
-                              <i class="icon-refresh"></i>
-                          </button> -->
-
-
-        <!--                   <li class="tackLi active" ng-click="saveTab($event)"><a id="tackTab" href="#a" data-toggle="tab" data-placement="bottom" title="Intro"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-                          <li class="compassLi" ng-click="saveTab($event)"><a id="compassTab" href="#b" data-toggle="tab" data-placement="bottom" title="Display"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-                          <li class="pencilLi" ng-click="saveTab($event)"><a id="pencilTab" href="#c" data-toggle="tab" data-placement="bottom" title="Tools"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-                          <li class="gearLi" ng-click="saveTab($event)"><a id="gearTab" href="#d" data-toggle="tab" data-placement="bottom" title="Resources"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li> -->
-
-        <!--                   <li class="tackLi active" ng-click="saveMainTab($event)"><a id="tackTab" href="#a" data-toggle="tab" data-placement="bottom" title="Intro"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-                          <li class="compassLi" ng-click="saveMainTab($event)"><a id="compassTab" href="#b" data-toggle="tab" data-placement="bottom" title="Display"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-                          <li class="pencilLi" ng-click="saveMainTab($event)"><a id="pencilTab" href="#c" data-toggle="tab" data-placement="bottom" title="Tools"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-                          <li class="gearLi" ng-click="saveMainTab($event)"><a id="gearTab" href="#d" data-toggle="tab" data-placement="bottom" title="Resources"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li> -->
-
-
-<!--                           <li class="tackLi active" ng-click="saveMainTab($event)"><a id="tackTab" href="#introTab" data-toggle="tab" data-placement="bottom" title="Intro"><i style="margin-left:1px !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-                          <li class="compassLi" ng-click="saveMainTab($event)"><a id="compassTab" href="#displayTab" data-toggle="tab" data-placement="bottom" title="Display"><i style="margin-left:1px !important;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-                          <li class="pencilLi" ng-click="saveMainTab($event)"><a id="pencilTab" href="#toolsTab" data-toggle="tab" data-placement="bottom" title="Tools"><i style="margin-left:1px !important;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-                          <li class="gearLi" ng-click="saveMainTab($event)"><a id="gearTab" href="#resourcesTab" data-toggle="tab" data-placement="bottom" title="Resources"><i style="margin-left:1px !important;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li>
-              
-               </ul>
-           </div> -->
-
-
-
-      </div><!--/Tabs content -->
+    </div><!--/Tabs content -->
 
 
 
@@ -227,6 +154,31 @@
       <div id="LocateButton"></div>
       <!-- Measure -->
       <measure-block></measure-block>
+
+
+      <!-- Map Tool-Tip for drawing tools -->
+<!--       <div class="drawtooltip" style="position:absolute; right:20px; top:200px; z-index:999; background:#fff;">Hover over me -->
+        <span class="drawtooltiptext"></span>
+<!--       </div> -->
+
+
+
+<!--       <h1>header</h1>
+      <img id="img" src="https://static.pexels.com/photos/6555/nature-sunset-person-woman-large.jpg" />
+      <i id="img-tooltip" data-toggle="tooltip" data-placement="right" title="Tooltip for image" data-animation="false" data-trigger="manual"/>
+ -->
+
+
+      <!-- <div id="divtoshow" style="display:none">test</div> -->
+<!--       <br><br>
+      <span id="spanhovering" style="color:black; background-color:#f8f8f8;">Mouse over this</span> -->
+
+<!-- 
+      <div style="position:absolute; right:20px; top:10px; z-Index:999;">
+          <div id="measurementDiv"></div>
+          <span style="font-size:smaller;padding:5px 5px;">Press <b>CTRL</b> to enable snapping.</span>
+
+ -->
     </div>
 
 
@@ -276,32 +228,95 @@
     </div>
 
 
+
+    
+
+
     <!-- Omnibar -->
     <div class="omnibarcontainer" > 
 
       <ul class="list-group cardList">
+        <li class=""></li>
         <li class=""><sel-prop></sel-prop></li>
         <li class="">           </li>
-        <li class="">           
-
-<!--           <div class="sectionsCard" >
-           <div class="mainTabs" class="tabs-below">
-               <ul class="nav nav-tabs theMainTabs" style="border: none !important;"> 
-                    <li class="tackLi active" ng-click="saveMainTab($event)" style="border: none !important;"><a id="tackTab2" href="#introTab" data-toggle="tab" data-placement="bottom" title="Intro" style="border: none !important;"><i style="margin-left:1px !important; font-size: 36px; border: none !important;" class="custom-icon-2 icon-pin slide-icons tip">&#xe801;</i></a></li>
-                    <li class="compassLi" ng-click="saveMainTab($event)" style="border: none !important;"><a id="compassTab2" href="#displayTab" data-toggle="tab" data-placement="bottom" title="Display" style="border: none !important;"><i style="margin-left:1px !important; font-size: 36px;" class="custom-icon-2 icon-map slide-icons tip">&#xe808;</i></a></li>
-                    <li class="pencilLi" ng-click="saveMainTab($event)" style="border: none !important;"><a id="pencilTab2" href="#toolsTab" data-toggle="tab" data-placement="bottom" title="Tools" style="border: none !important;"><i style="margin-left:1px !important; font-size: 36px;" class="fa fa-pencil fa-4 slide-icons tip"></i></a></li>
-                    <li class="gearLi" ng-click="saveMainTab($event)" style="border: none !important;"><a id="gearTab2" href="#resourcesTab" data-toggle="tab" data-placement="bottom" title="Resources" style="border: none !important;"><i style="margin-left:1px !important; font-size: 36px;" class="custom-icon-2 icon-cog-1 slide-icons tip">&#xe807;</i></a></li>
-               </ul>
-           </div>
-
-         </div>
- -->
-
-         </li>
+        <li class="">           </li>
         <li class=""><info-card></info-card></li>
-        <li class="" style="display:none;"><weather-card></weather-card></li>
+        <li class="" ><!-- <weather-card></weather-card> --></li>
         <li class="">      
           <a style="font-size: 85% !important;" class="introPaneTextSubset feedbackBlurb" style="" href="http://gisgate.co.clark.nv.us/gismo/apps/mobile/ow4/app/feedback/form.html"> <br> <i class="icon ion-thumbsup"></i> | Your feedback helps improve OpenWeb   </a>
+
+
+
+
+<!--           <div id="block-system-main-menu">
+              <ul class="menu">
+                  <li>
+                      <a title="HERE ABC" >ABC</a>
+                  </li>
+                  <li>
+                      <a title="HERE DEF" >DEF</a>
+                  </li>
+              </ul>
+          </div>
+ -->
+
+
+<!--             <div style='position:absolute:top:0px;left:0px; z-index:999999; background-color:black;'>
+ -->
+
+
+
+
+<!--            <div title="regular drawingTooltip">Hover me</div>
+
+           <a class="drawingTooltip" href="http://www.google.com/">
+               Google
+               <span id="drawingTooltip-span">
+                   <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+               </span>
+           </a>
+ -->
+
+
+<!--            <div title="regular drawingTooltip">Hover me</div>
+
+           <a class="drawingTooltip" href="http://www.google.com/">
+               Google
+               <span>
+                   <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+               </span>
+           </a>
+           <br /><br />
+           &nbsp;&nbsp;
+
+           <a class="drawingTooltip" href="http://www.google.com/">
+               Another one
+               <span>
+                   <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+               </span>
+           </a> -->
+
+
+
+
+
+
+
+
+
+
+
+<!--            <div id="divtoshow" style="display:none">test</div>
+           <br><br>
+           <span id="spanhovering">Mouse over this</span> -->
+
+
+
+<!--            </div>
+ -->
+
+
+
 
 
         </li>
@@ -310,7 +325,6 @@
         <li class="">    <!-- <button id="clear" data-dojo-type="dijit.form.Button">Clear Graphics</button> -->  </li>
 
       </ul>
-
 
 
 
